fix crash on firefox

--- a/src/components/ui/select/styles.css
+++ b/src/components/ui/select/styles.css
@@ -2,122 +2,132 @@ body:has(select:open) {
     overflow: hidden;
 }
 
-select,
-select::picker(select) {
-    outline: transparent;
-    border: transparent;
-    appearance: base-select;
-    cursor: initial;
+select * {
+    font-family: monospace;
 }
 
-select {
+.select-wrapper select {
     font-family: monospace;
     background-color: var(--gh-bg-secondary);
     border: 1px solid var(--gh-border);
     cursor: pointer;
     transition: all 0.2s ease;
-}
-
-select:where(:focus, :hover) {
-    background-color: var(--gh-bg-tertiary);
-    border-color: lch(from var(--gh-border) calc(l * 1.7) c h);
-}
-
-select::picker-icon {
-    display: none;
-}
-
-select .arrow {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    svg {
-        color: var(--gh-text-secondary);
-        width: 1.5em;
-        height: 1.5em;
-        transform-origin: center center;
-        translate: 0 5%;
-        transition: rotate 0.25s ease-in-out;
-    }
-}
-
-select:open .arrow svg {
-    rotate: 180deg;
-}
-
-.select-trigger {
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr min-content;
-    gap: 0.7em;
-    min-height: 1.5rem;
-    min-width: 12em;
-}
-
-select::picker(select) {
-    border: 1px solid var(--gh-border);
-    background-color: var(--gh-bg-secondary);
-    padding: 0.3rem;
+    padding: 0.4rem 0.6rem;
     border-radius: 0.4em;
-    transform: translateY(0.5em);
-    opacity: 1;
-    transition: opacity 0.25s ease-in-out, transform 0.3s, display 1s;
-    box-shadow: 2px 6px 8px #0006;
 
-    @starting-style {
-        opacity: 0;
-        transform: translateY(1em);
+    &:where(:focus, :hover) {
+        background-color: var(--gh-bg-tertiary);
+        border-color: lch(from var(--gh-border) calc(l * 1.7) c h);
     }
-}
 
-select::picker(select)::backdrop {
-    background-color: #00000044;
-    opacity: 1;
-    transition: opacity 0.5s ease-in-out;
+    @supports (appearance: base-select) {
+        padding: 0.2rem 0.5rem;
+        appearance: base-select;
 
-    @starting-style {
-        opacity: 0;
+        &::picker-icon {
+            display: none;
+        }
+
+        .arrow {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        svg {
+            color: var(--gh-text-secondary);
+            width: 1.5em;
+            height: 1.5em;
+            transform-origin: center center;
+            translate: 0 5%;
+            transition: rotate 0.25s ease-in-out;
+        }
+
+        &:open .arrow svg {
+            rotate: 180deg;
+        }
+
+        .select-trigger {
+            display: grid;
+            align-items: center;
+            grid-template-columns: 1fr min-content;
+            gap: 0.7em;
+            min-height: 1.5rem;
+            min-width: 10em;
+        }
+
+        &::picker(select) {
+            appearance: base-select;
+            border: 1px solid var(--gh-border);
+            background-color: var(--gh-bg-secondary);
+            padding: 0.3rem;
+            padding-block-start: 0.4rem;
+            border-radius: 0.4em;
+            transform: translateY(0.5em);
+            opacity: 1;
+            transition: opacity 0.25s ease-in-out, transform 0.3s, display 1s;
+            box-shadow: 2px 6px 8px #0006;
+
+            @starting-style {
+                opacity: 0;
+                transform: translateY(1em);
+            }
+        }
+
+        &::picker(select)::backdrop {
+            background-color: #00000044;
+            opacity: 1;
+            transition: opacity 0.5s ease-in-out;
+
+            @starting-style {
+                opacity: 0;
+            }
+        }
+
+        option {
+            outline: transparent;
+            border-radius: 0.3rem;
+            display: grid;
+            color: var(--gh-text-primary);
+            margin-block-end: 0.3rem;
+
+            &:last-of-type {
+                margin-block-end: 0;
+            }
+
+            &::checkmark {
+                display: none;
+            }
+
+            &:focus {
+                color: white;
+                background-color: #ffffff18;
+            }
+
+            .opt-content {
+                padding: 0.3rem 0.2rem;
+                display: grid;
+            }
+
+            .opt-label {
+                font-size: 1.07em;
+                font-weight: 500;
+            }
+
+            .opt-desc {
+                font-size: 0.83em;
+                color: var(--gh-text-secondary);
+            }
+        }
+
+        selectedcontent {
+            .opt-content {
+                padding: 0.15rem 0.2rem;
+            }
+
+            .opt-desc {
+                display: none;
+            }
+        }
     }
-}
-
-select option {
-    outline: transparent;
-    border-radius: 0.3rem;
-    display: grid;
-    color: var(--gh-text-primary);
-    margin-block: 0.2rem;
-
-    &::checkmark {
-        display: none;
-    }
-}
-
-select option:focus {
-    color: white;
-    background-color: #ffffff18;
-}
-
-.opt-content {
-    padding: 0.3rem 0.2rem;
-    display: grid;
-}
-
-.opt-label {
-    font-size: 1.07em;
-    font-weight: 500;
-}
-
-.opt-desc {
-    font-size: 0.93em;
-    color: var(--gh-text-secondary);
-}
-
-
-selectedcontent .opt-content {
-    padding: 0.15rem 0.2rem;
-}
-
-selectedcontent .opt-desc {
-    display: none;
 }
